# Voice_for_VLC

./: CMakeLists.txt  NotFoundException.h  NotRunningException.h  NotValidURL.cpp  README.md  TextOperation.h  command.h  list.json  main.cpp  media.cpp  media.h  message.cpp  message.h  rest_server.cpp  rest_server.h  save.json  synch_queue.cpp  synch_queue.h  vlc_manager.cpp  vlc_manager.h
src/: Main.cpp
src/Synchronization/: CMakeLists.txt
src/Utils/: CMakeLists.txt  TextOperation.cpp  TextOperation.h
src/conf/: OfflineDB.json
src/database/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  Media.cpp  Media.h
src/exceptions/: CMakeLists.txt  NotFoundException.cpp  NotFoundException.h  NotRunningException.cpp  NotRunningException.h  NotValidURLException.cpp  NotValidURLException.h
src/network/: CMakeLists.txt  RestServer.cpp  RestServer.h
src/player/: CMakeLists.txt  CurrentStatus.cpp  CurrentStatus.h  Media.h  VlcManager.cpp  VlcManager.h
src/savestate/: LastState.json
src/synchronization/: CMakeLists.txt  ConcurrentQueue.cpp  ConcurrentQueue.h  Message.cpp  Message.h  message.h
src/utils/: CMakeLists.txt  StateMachine.cpp  StateMachine.h  Utils.cpp  json.hpp
